meta data update

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SITE TITLE -->
-    <title>Simplifying DeFi Execution | Rivera Money</title>
+    <title>Infrastructure for Structured DeFi Products | Rivera Money</title>
     <meta name="description"
-    content="An institutional-grade DeFi platform to compose and automate DeFi strategies in a risk-managed environment.">
-    <meta property="og:title" content="Simplifying DeFi Execution | Rivera Money">
+    content="A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.">
+    <meta property="og:title" content="Infrastructure for Structured DeFi Products | Rivera Money">
     <meta property="og:description"
-        content="An institutional-grade DeFi platform to compose and automate DeFi strategies in a risk-managed environment.">
+        content="A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
     <meta property="og:image" content="/assets/images/luxury_bggg.png">
    
@@ -289,7 +289,7 @@
       <div class="custom-container dsk_device">
         <div class="col-lg-7 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
         <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
-          Ready to launch fully-automated vaults
+          Launch fully-automated DeFi vault
         </h1>
         <p class="mobile_vault_hero-para px-0 text-white text-center">
           Build & customize investment products with assets, protocols & strategies of your choice. Launch a non-custodial DeFi vault in seconds with our ready-to-use templates.
@@ -306,7 +306,7 @@
               <div class="line_height_25">Customize parameters & launch crypto index vaults with automatic rebalancing. Yield generation with protocols of choice.</div>
              </div>
          </div>
-         <div class="gateWay_flex_inner"><img src="assets/images/home_mobile_gateway.png" alt="Ready to launch fully-automated vaults"></div>
+         <div class="gateWay_flex_inner"><img src="assets/images/home_mobile_gateway.png" alt="Launch fully-automated DeFi vault"></div>
          <div class="gateWay_flex_inner">
           <div>
             <div class="gateWay_flex_inner_header_16">Market-neutral vault</div>
@@ -321,7 +321,7 @@
       </div>
       <div class="custom-container mbl_device">
         <div class="section_subheader text-center section_subheader_res mt-5 mb-5">
-          Ready to launch fully-automated vaults
+          Launch fully-automated DeFi vault
           </div>
        <div class="gateWay_flex_mobile">
           <div class="gateWay_flex_mobile_inner mb-5">
