--- a/index.html
+++ b/index.html
@@ -229,16 +229,6 @@
               
               <img src="assets/images/Blog.png" alt="Blog" style="width: 14px;">
               </li>
-              <!-- <li
-              class="animation"
-              data-animation="fadeInDown"
-              data-animation-delay="1.9s"
-            >
-            <a 
-            href="https://rivera.money/cbp/"
-           class="anchar_hvr"
-            >CBP</a>
-            </li> -->
               <li
               class="animation"
               data-animation="fadeInDown"
@@ -249,6 +239,20 @@
            class="anchar_hvr"
             >Get Early Access</a>       
             </li>
+              <!-- <li
+              class="animation"
+              data-animation="fadeInDown"
+              data-animation-delay="2s"
+              style="    margin-top: -4px;
+              cursor: pointer"
+            >
+            <a style="    padding: 10px 14px;
+            font-size: 14px;
+            border-radius: 10px;"
+           class="btn_mvp_header" onclick="OpenMvp()"
+            >Launch App</a>       
+           
+            </li> -->
             </ul>
           </div>
         </nav>
@@ -266,16 +270,16 @@
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
                   <h1 class="industies_hero-title text-white text-extraBold mb-4" style="font-family: 'Red Hat Display', sans-serif;font-weight: 700;">
-                    Infrastructure for
+                    No-code infrastructure
                     <br>
-                    Structured DeFi Products
+                    for DeFi vaults
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
                     A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.
                   </p>
                   <div class="btn_group pb-3">
-                    <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
-                      Get Early Access
+                    <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="OpenMvp()">
+                      Launch App
                     </button>
                   </div>
               </div>
@@ -815,6 +819,11 @@ window.intlTelInput(input, {
   separateDialCode: true,
   utilsScript: "assets/js/utils.js" // just for formatting/placeholders etc
 });
+</script>
+<script>
+  function OpenMvp() {
+      window.open("http://rivera-mvp-front-end.s3-website-ap-northeast-1.amazonaws.com/#/", "_blank");
+  }
 </script>
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
     <!-- <script src="assets/js/mouseleave.js"></script> -->
