--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SITE TITLE -->
-    <title>Infrastructure for Structured DeFi Products | Rivera Money</title>
+    <title>No-code infrastructure for DeFi vaults | Rivera Money</title>
     <meta name="description"
     content="A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.">
-    <meta property="og:title" content="Infrastructure for Structured DeFi Products | Rivera Money">
+    <meta property="og:title" content="No-code infrastructure for DeFi vaults | Rivera Money">
     <meta property="og:description"
         content="A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
@@ -229,6 +229,20 @@
               
               <img src="assets/images/Blog.png" alt="Blog" style="width: 14px;">
               </li>
+
+              <li
+              class="animation"
+              data-animation="fadeInDown"
+              data-animation-delay="2s"
+            >
+            <a
+            href="https://rivera.gitbook.io/docs/"
+           class="anchar_hvr"
+           target="_blank"
+            >Docs</a>   
+            <img src="assets/images/Blog.png" alt="Blog" style="width: 14px;">    
+            </li>
+
               <li
               class="animation"
               data-animation="fadeInDown"
