--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     for DeFi vaults
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.
+                    Powering DeFi liquidity by enabling easy innovation of goal-oriented investment products. Combine yield farming strategies with proven risk-management techniques.
                   </p>
                   <div class="btn_group pb-3">
                     <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="OpenMvp()">
@@ -307,17 +307,17 @@
       <div class="custom-container dsk_device">
         <div class="col-lg-7 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
         <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
-          Launch fully-automated DeFi vault
+          Launch your ERC-4626 vault
         </h1>
         <p class="mobile_vault_hero-para px-0 text-white text-center">
-          Build & customize investment products with assets, protocols & strategies of your choice. Launch a non-custodial DeFi vault in seconds with our ready-to-use templates.
+          Boost your AUM by offering self-custody investment products. Create personalized investment strategies using a range of assets, LP pools, and derivatives. Launch your ERC-4626-based investment vault in seconds with our ready-to-use templates.
         </p>
       </div>
        <div class="gateWay_flex">
          <div class="gateWay_flex_inner">
              <div>
-              <div class="gateWay_flex_inner_header_16">Multi-pool ACC vault</div>
-              <div class="line_height_25">Launch an auto-compounding vault with multiple assets & LPs. Automate your DeFi Ops with the highest efficiency.</div>
+              <div class="gateWay_flex_inner_header_16">Auto-farming vault</div>
+              <div class="line_height_25">Launch an auto-farming vault with choice of assets & protocols. Automate your DeFi Ops with the highest efficiency.</div>
              </div>
              <div class="mt_80">
               <div class="gateWay_flex_inner_header_16">Crypto index vault</div>
@@ -394,7 +394,7 @@
               <div class="back">
                 <div class="card">
                     <div class="card-body">
-                        <div>Create private or whitelisted vaults. Customize access depending upon the vault usage and avoid counterparty risks.
+                        <div>Create public, private, or whitelisted vaults. Customize access depending upon the vault usage and avoid counter-party risks.
                         </div>
                       </div>
                   </div>
@@ -480,7 +480,7 @@
           <div class="row align-items-center">
             <div class="col-lg-6 col-md-12 col-sm-12 res_md_mt_30 res_sm_mt_20">
               <h1 class="earlyaccess_subHeader">
-                Being early is rewarding!
+                Self-custody is the future!
               </h1>
               <div class="mt-4 mb_15_res">
                 DeFi is a paradigm shift fixing the centralization of financial power and giving you complete control of your money. It is slowly replacing the global finance infrastructure with software that no single person can control. 
