launch url update

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@ window.intlTelInput(input, {
 </script>
 <script>
   function OpenMvp() {
-      window.open("http://rivera-mvp-front-end.s3-website-ap-northeast-1.amazonaws.com/#/", "_blank");
+      window.open("https://app.rivera.money/#/", "_blank");
   }
 </script>
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script> -->
