index page update

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     for DeFi vaults
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    Boosting DeFi liquidity by democratizing innovation of DeFi investment products.
+                    Build new yield products, index funds & derivative strategies. Manage them easily while offering self-custody to end investors.
                   </p>
                   <div class="btn_group pb-3">
                     <!-- <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="OpenMvp()">
@@ -299,32 +299,32 @@
       <div class="custom-container dsk_device">
         <div class="col-lg-8 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
         <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
-          Build your personalize DeFi offering
+          Launch personalize ERC-4626 investment vaults
         </h1>
         <p class="mobile_vault_hero-para px-0 text-white text-center">
-          Combine yield farming with proven risk-management techniques. Build  custom strategies that suit your investor's goals. Launch your ERC-4626 compliant investment vault in seconds with our ready-to-use templates.
+          Bundle assets & LP products with custom risk-management solutions. Offer investment offerings as standard ERC-4626 vaults.
         </p>
       </div>
        <div class="gateWay_flex">
          <div class="gateWay_flex_inner">
              <div>
-              <div class="gateWay_flex_inner_header_16">Auto-farming vault</div>
-              <div class="line_height_25">Farm LP tokens of choice, built-in compounding to maximize capital efficiency</div>
+              <div class="gateWay_flex_inner_header_16">Auto-farming vaults</div>
+              <div class="line_height_25">Farm assets & pools of choice; maximize gain with algorithmic harvester</div>
              </div>
              <div class="mt_80">
-              <div class="gateWay_flex_inner_header_16">Index vault</div>
-              <div class="line_height_25">Build your personalized crypto index with automatic rebalancing</div>
+              <div class="gateWay_flex_inner_header_16">Index funds</div>
+              <div class="line_height_25">Build token baskets that auto-rebalance; earn yield with bluechip staking</div>
              </div>
          </div>
          <div class="gateWay_flex_inner"><img src="assets/images/home_mobile_gateway.png" alt="Launch fully-automated DeFi vault"></div>
          <div class="gateWay_flex_inner">
           <div>
-            <div class="gateWay_flex_inner_header_16">Delta-neutral vault</div>
-            <div class="line_height_25">Take advantage of high-yield LPs without getting exposure to the assets</div>
+            <div class="gateWay_flex_inner_header_16">Delta-neutral strategies</div>
+            <div class="line_height_25">Supply liquidity to high-yield LPs without getting exposure to the assets</div>
            </div>
            <div class="mt_80">
-            <div class="gateWay_flex_inner_header_16">Option vault</div>
-            <div class="line_height_25">Combine novel yield farming strategies with multi-leg options trading</div>
+            <div class="gateWay_flex_inner_header_16">Structured products</div>
+            <div class="line_height_25">Leverage DeFi composability to enable a range of derivative strategies </div>
            </div>
         </div>
        </div>
@@ -369,10 +369,10 @@
       <div class="custom-container">
         <div class="col-lg-8 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
           <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
-            Launch your custom ERC-4626 vault
+            A professional-grade platform for fund managers
           </h1>
           <p class="mobile_vault_hero-para px-0 text-white text-center">
-            We do the heavy lifting so you can focus freely on innovation. Rivera has all you need to build & manage institutional-grade DeFi products.
+            Built-in automation to put your fund operation at ease. Equipped with cutting-edge tools so you can access DeFi freely.
           </p>
         </div>
         <!-- <h1 class="section_subheader text-center mb_60 hrd_section_res">
@@ -475,6 +475,33 @@
     </section>
     <!-- END SECTION SERVICES -->
 
+
+    <!-- START SECTION SERVICES -->
+    <section class="small_pt mrgn_top_mbl" style="margin-bottom: -30px;">
+      <div class="custom-container">
+        <div class="col-lg-8 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
+          <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
+            Recognitions
+          </h1>
+          <!-- <p class="mobile_vault_hero-para px-0 text-white text-center">
+            We do the heavy lifting so you can focus freely on innovation. Rivera has all you need to build & manage institutional-grade DeFi products.
+          </p> -->
+        </div>
+        <div class="d-flex" style="    justify-content: center;align-items: center;">
+          <div style="padding: 20px;"><img src="/assets/images/creativeLab.png" style="width:250px"></div>
+          <div style="padding: 20px;"><img src="/assets/images/excel-awards.png" style="width:250px"></div>
+        </div>
+        <!-- <h1 class="section_subheader text-center mb_60 hrd_section_res">
+          Launch your custom ERC-4626 vault
+        </h1>
+        <p class="mobile_vault_hero-para px-0 text-white text-center">
+          We do the heavy lifting so you can focus freely on innovation. Rivera has all you need to build & manage institutional-grade DeFi products.
+        </p> -->
+       
+      </div>
+    </section>
+    <!-- END SECTION SERVICES -->
+
     <!-- START SECTION CONTACT -->
 
     <section id="earlyAccess">
@@ -485,8 +512,8 @@
               <h1 class="earlyaccess_subHeader">
                 Self-custody is the future!
               </h1>
-              <div class="mt-4 mb_15_res">
-                DeFi reinforces the core crypto principles of self-custody & decentralization while putting investor assets to work. On-chain asset management is here, and that's where the industry is heading.
+              <div class="mt-4 mb_15_res" style="width: 90%;">
+                DeFi reinforces the core crypto principles of self-custody & decentralization while putting investor assets to work. On-chain asset management is the future.
                 </br></br>
                 Are you ready to make the shift?
               </div>
@@ -532,7 +559,7 @@
             <div class="col-md-6 mb_20_res">
               <div class="earlyAccess_black">
                 <div class="mr-2"> <img src="assets/images/circle_green.png" alt="Rivera Token" class="ern_img"></div>
-                <div class="txt_wht">Earn up to 10% bonus APY in RVRA token for all your investments</div>
+                <div class="txt_wht">Earn up to 10% bonus APY in RVRA tokens for all vault deposits</div>
               </div>
             </div>
             <div class="col-md-6">
