--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
                       Secure, Convenient and <br class="mob_hidden"> Private Vault for all <span>Valuables</span>
                   </h1> -->
                   <h1 class="industies_hero-title text-white text-extraBold mb-4" style="font-family: 'Red Hat Display', sans-serif;font-weight: 700;">
-                    No-code infrastructure
+                    DeFi operating system
                     <br>
-                    for DeFi vaults
+                    for investment professionals
                   </h1>
                   <p class="mobile_vault_hero-para px-0 text-white">
-                    Build new yield products, index funds & derivative strategies. Manage them easily while offering self-custody to end investors.
+                    Offer personalized on-chain asset management services with our no-code platform.
                   </p>
                   <div class="btn_group pb-3">
                     <!-- <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="OpenMvp()">
@@ -299,7 +299,7 @@
       <div class="custom-container dsk_device">
         <div class="col-lg-8 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
         <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
-          Launch personalize ERC-4626 investment vaults
+          Launch ERC-4626 investment vaults
         </h1>
         <p class="mobile_vault_hero-para px-0 text-white text-center">
           Bundle assets & LP products with custom risk-management solutions. Offer investment offerings as standard ERC-4626 vaults.
@@ -369,7 +369,7 @@
       <div class="custom-container">
         <div class="col-lg-8 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
           <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
-            A professional-grade platform for fund managers
+            Innovate freely, we got your back
           </h1>
           <p class="mobile_vault_hero-para px-0 text-white text-center">
             Built-in automation to put your fund operation at ease. Equipped with cutting-edge tools so you can access DeFi freely.
@@ -387,9 +387,9 @@
               <div class="front">
                 <div class="card">
                   <div class="card-body text-center">
-                    <div class="list_header txt_algn_lft">Customizable access</div>
+                    <div class="list_header txt_algn_lft">KYC'd vaults</div>
                     <div class="stack_img mt_4rm">
-                      <img src="assets/images/gateway222.webp"  alt="Customizable access" class="flt_lft" />
+                      <img src="assets/images/gateway222.webp"  alt="KYC'd vaults" class="flt_lft" />
                     </div>
                   </div>
                 </div>
