--- a/index.html
+++ b/index.html
@@ -607,7 +607,8 @@
               <div class="footer_logo mb-3">
                 <div>
                   <a href="https://medium.com/rivera-money" target="_blank" class="mr_10"> <img alt="medium" class="wdth_50" src="assets/images/medium.webp" /></a>
-                  <a href="https://twitter.com/Rivera_Money_" target="_blank"> <img alt="Twitter" class="wdth_50" src="assets/images/twitter.png" /></a>
+                  <a href="https://twitter.com/Rivera_Money_" target="_blank" class="mr_10"> <img alt="Twitter" class="wdth_50" src="assets/images/twitter.png" /></a>
+                  <a href="https://www.linkedin.com/company/rivera-money/" target="_blank"> <img alt="Linkedin" class="wdth_50" src="assets/images/linkedin.png" /></a>
                 </div>
               </div>
             </div>
