--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- SITE TITLE -->
-    <title>No-code infrastructure for DeFi vaults | Rivera Money</title>
+    <title>DeFi operating system for investment professionals | Rivera Money</title>
     <meta name="description"
     content="A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.">
-    <meta property="og:title" content="No-code infrastructure for DeFi vaults | Rivera Money">
+    <meta property="og:title" content="DeFi operating system for investment professionals | Rivera Money">
     <meta property="og:description"
         content="A professional-grade no-code environment to build goal-oriented investment products. Combine yield farming strategies with proven derivative techniques.">
     <meta name="keywords" content="rivera, rivera money, yield mining, DeFi wallet, cross-chain strategy, liquidity mining, one stop DeFi solution, yield marketplace">
@@ -249,7 +249,7 @@
               data-animation-delay="2s"
             >
 
-            <button onclick="OpenURL('https://app.rivera.money/#/')" class="btn transparent_btn launch_app_btn">Launch App</button>
+            <button onclick="OpenURL('https://app.rivera.money/#/')" class="btn transparent_btn launch_app_btn">Build Vaults</button>
             <!-- <a
             onclick="OpenMvp()"
            class="anchar_hvr"
@@ -489,9 +489,9 @@
         </div>
         <div class="d-flex" style="    justify-content: center;align-items: center;">
           <!-- <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/creativeLab.png" style="width:250px"></div> -->
-          <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/Recognitions1.png" style="width:250px"></div>
-          <div style="padding: 20px;"><img onclick="OpenURL('https://medium.com/rivera-money/rivera-awarded-1-defi-platform-in-uae-6cddd0f3e101')" src="/assets/images/excel-awards.png" style="width:250px"></div>
-          <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/Recognitions2.png" style="width:250px"></div>
+          <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/Recognitions1.png" style="width:200px"></div>
+          <div style="padding: 20px;"><img onclick="OpenURL('https://medium.com/rivera-money/rivera-awarded-1-defi-platform-in-uae-6cddd0f3e101')" src="/assets/images/excel-awards.png" style="width:200px"></div>
+          <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/Recognitions2.png" style="width:200px"></div>
          
         </div>
         <!-- <h1 class="section_subheader text-center mb_60 hrd_section_res">
@@ -562,7 +562,7 @@
             <div class="col-md-6 mb_20_res">
               <div class="earlyAccess_black">
                 <div class="mr-2"> <img src="assets/images/circle_green.png" alt="Rivera Token" class="ern_img"></div>
-                <div class="txt_wht">Earn up to 10% bonus APY in RVRA tokens for all vault deposits</div>
+                <div class="txt_wht">Earn up to 10% bonus APY in Rivera tokens for all vault deposits</div>
               </div>
             </div>
             <div class="col-md-6">
