join discord button add

--- a/index.html
+++ b/index.html
@@ -284,9 +284,14 @@
                     <!-- <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="OpenMvp()">
                       Launch App
                     </button> -->
-                    <button type="submit" name="submit2" style="margin: auto;"  class="btn btn-default btn-radius nav-link content-popup" onclick="window.location.href='#earlyAccess';">
+                    <div >
+                    <button type="submit" name="submit2"   class="btn btn-default btn-radius content-popup" onclick="window.location.href='#earlyAccess';">
                       Get Early Access
                     </button>
+                    <button type="submit" name="submit2"  class="btn transparent_btn btn-radius content-popup" onclick="window.open('https://discord.com/invite/sbMxwS6VEV', '_blank')">
+                      Join Discord
+                    </button>
+                  </div>
                   </div>
               </div>
           </div>
