--- a/index.html
+++ b/index.html
@@ -494,9 +494,9 @@
         </div>
         <div class="d-flex" style="    justify-content: center;align-items: center;">
           <!-- <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/creativeLab.png" style="width:250px"></div> -->
-          <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/Recognitions1.png" style="width:200px"></div>
-          <div style="padding: 20px;"><img onclick="OpenURL('https://medium.com/rivera-money/rivera-awarded-1-defi-platform-in-uae-6cddd0f3e101')" src="/assets/images/excel-awards.png" style="width:200px"></div>
-          <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/Recognitions2.png" style="width:200px"></div>
+          <div style="padding: 20px;cursor: pointer;"><img onclick="OpenURL('https://ethglobal.com/showcase/big-shot-wndi1')" src="/assets/images/Recognitions1.png" style="width:200px"></div>
+          <div style="padding: 20px;cursor: pointer;"><img onclick="OpenURL('https://medium.com/rivera-money/rivera-awarded-1-defi-platform-in-uae-6cddd0f3e101')" src="/assets/images/excel-awards.png" style="width:200px"></div>
+          <div style="padding: 20px;cursor: pointer;"><img onclick="OpenURL('https://dappbay.bnbchain.org/detail/rivera-money')" src="/assets/images/Recognitions2.png" style="width:200px"></div>
          
         </div>
         <!-- <h1 class="section_subheader text-center mb_60 hrd_section_res">
