newletter image add

--- a/index.html
+++ b/index.html
@@ -593,9 +593,14 @@
               <div
                 class="footer_logo mb-3"
               >
-                <a href="#home_section" class="page-scroll">
-                  <img alt="logo" src="assets/images/logo.webp" style="width: 130px;"/>
-                </a>
+              <a href="https://ethermail.io/community/rivera-money" target="_blank" class="page-scroll" >
+                <img alt="logo" src="assets/images/Newsletter.svg" style="width: 190px;"/>
+              </a>
+              <!-- <a href="#home_section" class="page-scroll" >
+                <img alt="logo" src="assets/images/logo.webp" style="width: 130px;"/>
+              </a> -->
+              
+                
               </div>
             </div>
             <div class="col-lg-4 col-md-6 res_md_mt_30 res_sm_mt_20 ftr_contact_us">
