--- a/index.html
+++ b/index.html
@@ -304,17 +304,17 @@
       <div class="custom-container dsk_device">
         <div class="col-lg-8 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
         <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
-          Launch ERC-4626 investment vaults
+          Launch ERC-4626 self-custody vault
         </h1>
         <p class="mobile_vault_hero-para px-0 text-white text-center">
-          Bundle assets & LP products with custom risk-management solutions. Offer investment offerings as standard ERC-4626 vaults.
+          Bundle crypto assets & LP products with custom risk-management solutions. Offer investment offerings to end investors as standard ERC-4626 vaults.
         </p>
       </div>
        <div class="gateWay_flex">
          <div class="gateWay_flex_inner">
              <div>
-              <div class="gateWay_flex_inner_header_16">Auto-farming vaults</div>
-              <div class="line_height_25">Farm assets & pools of choice; maximize gain with algorithmic harvester</div>
+              <div class="gateWay_flex_inner_header_16">v3 auto-farming vaults</div>
+              <div class="line_height_25">Earn superior yield by actively managing concentrated liquidity on v3 pools on behalf of your clients</div>
              </div>
              <div class="mt_80">
               <div class="gateWay_flex_inner_header_16">Index funds</div>
@@ -492,7 +492,7 @@
             We do the heavy lifting so you can focus freely on innovation. Rivera has all you need to build & manage institutional-grade DeFi products.
           </p> -->
         </div>
-        <div class="d-flex" style="    justify-content: center;align-items: center;">
+        <div class="d-flex" style="    justify-content: space-evenly;align-items: center;">
           <!-- <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/creativeLab.png" style="width:250px"></div> -->
           <div style="padding: 20px;"><img onclick="OpenURL('https://ethglobal.com/showcase/big-shot-wndi1')" src="/assets/images/Recognitions1.png" style="width:200px;cursor: pointer;"></div>
           <div style="padding: 20px;"><img onclick="OpenURL('https://medium.com/rivera-money/rivera-awarded-1-defi-platform-in-uae-6cddd0f3e101')" src="/assets/images/excel-awards.png" style="width:200px;cursor: pointer;"></div>
@@ -588,13 +588,13 @@
     <footer>
       <div class="top_footer bg_light_dark">
         <div class="custom-container-footer">
-          <div class="row" style="    justify-content: space-between;">
+          <div class="row" style="    justify-content: space-between;    align-items: center;">
             <div class="col-lg-4 col-md-12">
               <div
                 class="footer_logo mb-3"
               >
               <a href="https://ethermail.io/community/rivera-money" target="_blank" class="page-scroll" >
-                <img alt="logo" src="assets/images/Newsletter.svg" style="width: 190px;"/>
+                <img alt="logo" src="assets/images/Newsletter.svg" style="width: 250px;"/>
               </a>
               <!-- <a href="#home_section" class="page-scroll" >
                 <img alt="logo" src="assets/images/logo.webp" style="width: 130px;"/>
@@ -625,7 +625,7 @@
           </div>
         </div>
         <div class="text-center mt-4" style="    font-size: 14px;">
-            <span>Copyright © 2022. Rivera. All rights reserved.</span>
+            <span>Copyright © 2023 | Rivera Money Inc | All rights reserved</span>
         </div>
       </div>
 
