--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
          <div class="gateWay_flex_inner">
              <div>
               <div class="gateWay_flex_inner_header_16">v3 auto-farming vaults</div>
-              <div class="line_height_25">Earn superior yield by actively managing concentrated liquidity on v3 pools on behalf of your clients</div>
+              <div class="line_height_25">Earn superior yield by actively managing concentrated liquidity range on v3 pools</div>
              </div>
              <div class="mt_80">
               <div class="gateWay_flex_inner_header_16">Index funds</div>
@@ -486,7 +486,7 @@
       <div class="custom-container">
         <div class="col-lg-8 col-md-8 mt_60 mb_80" style="margin-left: auto;margin-right: auto;">
           <h1 class="section_subheader text-center section_subheader_res" style="margin-bottom: 20px;">
-            Recognitions
+            Recognitions & Partners
           </h1>
           <!-- <p class="mobile_vault_hero-para px-0 text-white text-center">
             We do the heavy lifting so you can focus freely on innovation. Rivera has all you need to build & manage institutional-grade DeFi products.
@@ -497,6 +497,14 @@
           <div style="padding: 20px;"><img onclick="OpenURL('https://ethglobal.com/showcase/big-shot-wndi1')" src="/assets/images/Recognitions1.png" style="width:200px;cursor: pointer;"></div>
           <div style="padding: 20px;"><img onclick="OpenURL('https://medium.com/rivera-money/rivera-awarded-1-defi-platform-in-uae-6cddd0f3e101')" src="/assets/images/excel-awards.png" style="width:200px;cursor: pointer;"></div>
           <div style="padding: 20px;"><img onclick="OpenURL('https://dappbay.bnbchain.org/detail/rivera-money')" src="/assets/images/Recognitions2.png" style="width:200px;cursor: pointer;"></div>
+         
+        </div>
+
+        <div class="d-flex" style="    justify-content: space-evenly;align-items: center;">
+          <!-- <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/creativeLab.png" style="width:250px"></div> -->
+          <div style="padding: 20px;"><img onclick="OpenURL('https://www.gelato.network/')" src="/assets/images/gelato.svg" style="width:200px;cursor: pointer;"></div>
+          <div style="padding: 20px;"><img onclick="OpenURL('https://swing.xyz/')" src="/assets/images/swing.svg" style="width:250px;cursor: pointer;"></div>
+          <div style="padding: 20px;"><img onclick="OpenURL('https://www.arda.finance/')" src="/assets/images/arda.svg" style="width:200px;cursor: pointer;"></div>
          
         </div>
         <!-- <h1 class="section_subheader text-center mb_60 hrd_section_res">
