launch section update for mobile

--- a/index.html
+++ b/index.html
@@ -340,28 +340,28 @@
           </div>
        <div class="gateWay_flex_mobile">
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" alt="Multi-pool ACC vault​" class="wdt_90"></div>
-            <div class="list_header mb-2">Multi-pool ACC vault​</div>
-            <div>Launch an auto-compounding vault with multiple assets & LPs. Automate your DeFi Ops with the highest efficiency.
+            <div class="mb-3"><img src="assets/images/inestor_mbl1.webp" alt="v3 auto-farming vaults​" class="wdt_90"></div>
+            <div class="list_header mb-2">v3 auto-farming vaults​</div>
+            <div>Earn superior yield by actively managing concentrated liquidity range on v3 pools.
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Market-neutral vault" class="wdt_90"></div>
-            <div class="list_header mb-2">Market-neutral vault</div>
-            <div>Take advantage of high-yield LPs without getting exposure to the assets. Maximize your returns on the blue-chip coins.
+            <div class="mb-3"><img src="assets/images/inestor_mbl3.webp" alt="Delta-neutral strategies" class="wdt_90"></div>
+            <div class="list_header mb-2">Delta-neutral strategies</div>
+            <div>Supply liquidity to high-yield LPs without getting exposure to the assets.
             </div>
           </div>
           <div class="gateWay_flex_mobile_inner mb-5">
-            <div class="mb-3"><img src="assets/images/inestor_mblt4.webp" alt="Crypto index vault" class="wdt_90"></div>
-            <div class="list_header mb-2">Crypto index vault​</div>
-            <div>Customize parameters & launch crypto index vaults with automatic rebalancing. Yield generation with protocols of choice.
+            <div class="mb-3"><img src="assets/images/inestor_mblt4.webp" alt="Index funds" class="wdt_90"></div>
+            <div class="list_header mb-2">Index funds​</div>
+            <div>Build token baskets that auto-rebalance; earn yield with bluechip staking.
             </div>
           </div>
           
           <div class="gateWay_flex_mobile_inner">
-            <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" alt="DeFi option vault" class="wdt_90"></div>
-            <div class="list_header mb-2">DeFi option vault</div>
-            <div>Combine yield farming strategies with multi-leg options trading to enable a range of risk-adjusted products.
+            <div class="mb-3"><img src="assets/images/inestor_mbl2.webp" alt="Structured products" class="wdt_90"></div>
+            <div class="list_header mb-2">Structured products</div>
+            <div>Leverage DeFi composability to enable a range of derivative strategies.
             </div>
           </div>
        </div>
