--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
       </div>
       <div class="custom-container mbl_device">
         <div class="section_subheader text-center section_subheader_res mt-5 mb-5">
-          Launch fully-automated DeFi vault
+          Launch ERC-4626 self-custody vault
           </div>
        <div class="gateWay_flex_mobile">
           <div class="gateWay_flex_mobile_inner mb-5">
