--- a/marketplace-product/cbp/index.html
+++ b/marketplace-product/cbp/index.html
@@ -37,13 +37,14 @@
     <link rel="stylesheet" href="/assets/css/intlTelInput.css">
     <!-- <link rel="preload" href="/assets/images/hero_side2.webp" as="image"> -->
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSV2F5BBHK"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-FSV2F5BBHK');
-    </script>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DP1ZRL5G0J"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-DP1ZRL5G0J');
+</script>
     <!-- End of StatCounter Code -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
