blog link update

--- a/index.html
+++ b/index.html
@@ -581,17 +581,17 @@
         </div>
         <div class="d-flex" style="    justify-content: space-evenly;">
           <!-- <div style="padding: 20px;"><img onclick="OpenURL('https://creativedestructionlab.com//')" src="/assets/images/creativeLab.png" style="width:250px"></div> -->
-          <div style="width: 30%;">
+          <div style="width: 30%;" onclick="OpenURL('https://medium.com/rivera-money/awarded-uniswap-bounty-for-innovating-structured-products-on-concentrated-lp-pools-83c6f2b79632')">
             <img  src="/assets/images/blog1.svg" style="cursor: pointer;">
             <div>
               🦄 Rivera won Uniswap bounty for innovating Structured Products on Uni v3 🎉
             </div>
           </div>
-          <div style="width: 30%;">
+          <div style="width: 30%;" onclick="OpenURL('https://medium.com/rivera-money/rivera-won-bnb-chain-hackathon-most-innovative-alm-infrastructure-76032fcad37d')">
             <img  src="/assets/images/blog2.svg" style="cursor: pointer;">
             <div>🥳 Rivera won BNB Chain Hackathon; Most Innovative Liquidity Management Protocol</div>
           </div>
-          <div style="width: 30%;">
+          <div style="width: 30%;" onclick="OpenURL('https://medium.com/rivera-money/rivera-testnet-launch-whitelisting-for-phase-1-is-open-9d11557a9d1d')">
             <img  src="/assets/images/blog3.svg" style="cursor: pointer;">
             <div>Rivera Testnet Launch |  Whitelisting for Phase 1 is Open 🔥</div>
           </div>
